消息管理页面

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXGL/XXGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXGL/XXGL.cshtml
@@ -32,22 +32,22 @@
         </div>
     </div>
     <div id="div_main_info" class="div_main_info">
-        <div id="divFirst" style="display: block">
+        <div id="divXTTZLB" style="display: block">
             <div class="div_main_info_head">
                 共<span class="span_main_info_head" id="span_main_info_head_gjt">12</span>条，<span class="span_main_info_head" id="span_main_info_head_wdjt">7</span>条未读
             </div>
-            <table id="divFirst" class="table_main_info">
+            <table class="table_main_info">
                 <thead>
-                    <tr class="tr_main_info">
-                        <th style="width:40px;"></th>
-                        <th style="width:120px;">发件人</th>
-                        <th style="width:400px;">消息内容</th>
-                        <th style="width:120px;">时间</th>
-                        <th style="width:80px;">操作</th>
-                    </tr>
+                <tr class="tr_main_info">
+                    <th style="width: 40px;"></th>
+                    <th style="width: 120px;">发件人</th>
+                    <th style="width: 400px;">消息内容</th>
+                    <th style="width: 120px;">时间</th>
+                    <th style="width: 80px;">操作</th>
+                </tr>
                 </thead>
                 <tbody id="tbody_main_info_xttz">
-                    @*<tr class="tr_main_info">
+                @*<tr class="tr_main_info">
                         <td style="width:40px;"><input type="checkbox" value="" /></td>
                         <td style="width:120px;">系统</td>
                         <td style="width:400px;"><a class="a_main_info_xxnr">您成功更改了登录密码</a>。</td>
@@ -56,11 +56,17 @@
                     </tr>*@
                 </tbody>
             </table>
+            <div class="div_main_info_bottom">
+                <input class="checkbox_main_info_bottom" type="checkbox" value=""/><span class="span_main_info_bottom">全选</span><input class="input_main_info_bottom" type="button" value="删除选中项"/><input class="input_main_info_bottom" type="button" value="设为只读"/>
+                <div class="div_main_info_bottom_fy">
+                    <a class="a_main_info_bottom_fy">1</a><a class="a_main_info_bottom_fy">2</a><a class="a_main_info_bottom_fy">3</a><a class="a_main_info_bottom_fy">下一页</a>
+                </div>
+            </div>
         </div>
-        <div id="divSecond" style="display: none">
+        <div id="divKHZXLB" style="display: none">
             <table class="table_main_info"></table>
         </div>
-        <div id="divThird" style="display: none">
+        <div id="divWDZXLB" style="display: none">
             <table class="table_main_info"></table>
         </div>
     </div>
