--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXGL/XXGL.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXGL/XXGL.css
@@ -46,6 +46,16 @@
     padding-top: 8px;
 }
 
+.div_main_info_bottom {
+    background-color: #fff;
+    height: 38px;
+    color: #333;
+    font-size: 14px;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    padding-left: 10px;
+    padding-top: 8px;
+}
+
 .tr_main_info {
     color: #666;
     font-size: 12px;
@@ -65,8 +75,8 @@
 
 .a_main_info_xxnr {
     cursor: pointer;
-    font-weight:700;
-    font-size:14px;
+    font-weight: 700;
+    font-size: 14px;
 }
 
     .a_main_info_xxnr:hover {
@@ -74,11 +84,11 @@
     }
 
 .a_main_info_cz {
-     font-weight:700;
-     cursor: pointer;
+    font-weight: 700;
+    cursor: pointer;
 }
 
-.a_main_info_cz:hover {
+    .a_main_info_cz:hover {
         color: #ff6100;
     }
 
@@ -91,3 +101,50 @@
     .span_main_info_head:hover {
         color: #ff6100;
     }
+
+.checkbox_main_info_bottom {
+    float: left;
+}
+
+.span_main_info_bottom {
+    font-size: 12px;
+    margin-left: 8px;
+    margin-top: 2px;
+    float: left;
+}
+
+.input_main_info_bottom {
+    width: 90px;
+    height: 23px;
+    font-size: 12px;
+    margin-left: 10px;
+    float: left;
+    background-color: rgba(241,241,241,1);
+    color: #333;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
+
+.div_main_info_bottom_fy {
+    float: right;
+}
+
+.a_main_info_bottom_fy {
+    line-height: 18px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 12px;
+    background-color: #ffffff;
+    border: 1px solid #dee3e7;
+    padding: 2px 6px;
+    display: inline-block;
+    margin: 0 6px;
+    color: #333;
+
+}
+
+.a_main_info_bottom_fy:hover {
+    background-color: #5bc0de;
+    text-decoration: none;
+    color: #ffffff;
+}
