--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXGL/XXGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXGL/XXGL.cshtml
@@ -34,7 +34,7 @@
     <div id="div_main_info" class="div_main_info">
         <div id="divXTTZLB" style="display: block">
             <div class="div_main_info_head">
-                共<span class="span_main_info_head" id="span_main_info_head_gjt">12</span>条，<span class="span_main_info_head" id="span_main_info_head_wdjt">7</span>条未读
+                共<span class="span_main_info_head_gjt" id="span_main_info_head_gjt"></span>条，<span class="span_main_info_head_wdjt" id="span_main_info_head_wdjt"></span>条未读
             </div>
             <table class="table_main_info">
                 <thead>
@@ -58,8 +58,8 @@
             </table>
             <div class="div_main_info_bottom">
                 <input class="checkbox_main_info_bottom" type="checkbox" value=""/><span class="span_main_info_bottom">全选</span><input class="input_main_info_bottom" type="button" value="删除选中项"/><input class="input_main_info_bottom" type="button" value="设为只读"/>
-                <div class="div_main_info_bottom_fy">
-                    <a class="a_main_info_bottom_fy">1</a><a class="a_main_info_bottom_fy">2</a><a class="a_main_info_bottom_fy">3</a><a class="a_main_info_bottom_fy">下一页</a>
+                <div class="div_main_info_bottom_fy" id="div_main_info_bottom_fy">
+                    @*<a class="a_main_info_bottom_fy">1</a><a class="a_main_info_bottom_fy">2</a><a class="a_main_info_bottom_fy">3</a><a class="a_main_info_bottom_fy">下一页</a>*@
                 </div>
             </div>
         </div>
