--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXGL/XXGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXGL/XXGL.cshtml
@@ -47,19 +47,14 @@
                 </tr>
                 </thead>
                 <tbody id="tbody_main_info_xttz">
-                @*<tr class="tr_main_info">
-                        <td style="width:40px;"><input type="checkbox" value="" /></td>
-                        <td style="width:120px;">系统</td>
-                        <td style="width:400px;"><a class="a_main_info_xxnr">您成功更改了登录密码</a>。</td>
-                        <td style="width:120px;">2017-07-31 17:52 </td>
-                        <td style="width:80px;"><a class="a_main_info_cz">删除</a></td>
-                    </tr>*@
                 </tbody>
             </table>
             <div class="div_main_info_bottom">
-                <input class="checkbox_main_info_bottom" type="checkbox" value=""/><span class="span_main_info_bottom">全选</span><input class="input_main_info_bottom" type="button" value="删除选中项"/><input class="input_main_info_bottom" type="button" value="设为只读"/>
+                <input class="checkbox_main_info_bottom" id="checkbox_main_info_bottom" type="checkbox"/>
+                <span class="span_main_info_bottom">全选</span>
+                <input class="input_main_info_bottom" id="input_main_info_bottom_scxzx" type="button" value="删除选中项" />
+                <input class="input_main_info_bottom" id="input_main_info_bottom_swzd" type="button" value="设为只读" />
                 <div class="div_main_info_bottom_fy" id="div_main_info_bottom_fy">
-                    @*<a class="a_main_info_bottom_fy">1</a><a class="a_main_info_bottom_fy">2</a><a class="a_main_info_bottom_fy">3</a><a class="a_main_info_bottom_fy">下一页</a>*@
                 </div>
             </div>
         </div>
