--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXGL/XXGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXGL/XXGL.cshtml
@@ -38,19 +38,18 @@
             </div>
             <table class="table_main_info">
                 <thead>
-                <tr class="tr_main_info">
-                    <th style="width: 40px;"></th>
-                    <th style="width: 120px;">发件人</th>
-                    <th style="width: 400px;">消息内容</th>
-                    <th style="width: 120px;">时间</th>
-                    <th style="width: 80px;">操作</th>
-                </tr>
+                    <tr class="tr_main_info">
+                        <th style="width: 40px;"></th>
+                        <th style="width: 120px;">发件人</th>
+                        <th style="width: 400px;">消息内容</th>
+                        <th style="width: 120px;">时间</th>
+                        <th style="width: 80px;">操作</th>
+                    </tr>
                 </thead>
-                <tbody id="tbody_main_info_xttz">
-                </tbody>
+                <tbody id="tbody_main_info_xttz"></tbody>
             </table>
             <div class="div_main_info_bottom">
-                <input class="checkbox_main_info_bottom" id="checkbox_main_info_bottom" type="checkbox"/>
+                <input class="checkbox_main_info_bottom" id="checkbox_main_info_bottom" type="checkbox" />
                 <span class="span_main_info_bottom">全选</span>
                 <input class="input_main_info_bottom" id="input_main_info_bottom_scxzx" type="button" value="删除选中项" />
                 <input class="input_main_info_bottom" id="input_main_info_bottom_swzd" type="button" value="设为只读" />
@@ -59,10 +58,32 @@
             </div>
         </div>
         <div id="divKHZXLB" style="display: none">
-            <table class="table_main_info"></table>
+            <table class="table_main_info">
+                <thead>
+                    <tr class="tr_main_info">
+                        <th style="width: 40px;"></th>
+                        <th style="width: 120px;">发件人</th>
+                        <th style="width: 400px;">消息内容</th>
+                        <th style="width: 120px;">时间</th>
+                        <th style="width: 80px;">操作</th>
+                    </tr>
+                </thead>
+                <tbody id="tbody_main_info_khzx"></tbody>
+            </table>
         </div>
         <div id="divWDZXLB" style="display: none">
-            <table class="table_main_info"></table>
+            <table class="table_main_info">
+                <thead>
+                    <tr class="tr_main_info">
+                        <th style="width: 40px;"></th>
+                        <th style="width: 120px;">发件人</th>
+                        <th style="width: 400px;">消息内容</th>
+                        <th style="width: 120px;">时间</th>
+                        <th style="width: 80px;">操作</th>
+                    </tr>
+                </thead>
+                <tbody id="tbody_main_info_wdzx"></tbody>
+            </table>
         </div>
     </div>
 </body>
