--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXGL/XXGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXGL/XXGL.cshtml
@@ -52,7 +52,7 @@
                 <input class="checkbox_main_info_bottom" id="checkbox_main_info_bottom" type="checkbox" />
                 <span class="span_main_info_bottom">全选</span>
                 <input class="input_main_info_bottom" id="input_main_info_bottom_scxzx" type="button" value="删除选中项" />
-                <input class="input_main_info_bottom" id="input_main_info_bottom_swzd" type="button" value="设为只读" />
+                <input class="input_main_info_bottom" id="input_main_info_bottom_swyd" type="button" value="设为已读" />
                 <div class="div_main_info_bottom_fy" id="div_main_info_bottom_fy">
                 </div>
             </div>
