--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HFCZ/HFCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HFCZ/HFCZ.cshtml
@@ -32,7 +32,7 @@
             <div class="div_content_info">
                 <span class="span_content_info_left">手机号码：</span>
                 <input class="input_content" id="inputHFSJHM" maxlength="11" type="text" placeholder="请输入手机号码">
-                <span class="span_conent_info" id="span_conent_info_hfsj"></span>
+                <span class="span_conent_info" id="span_content_info_hfsj"></span>
             </div>
             <div class="div_content_info">
                 <span class="span_content_info_left">话费充值：</span>
