--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HFCZ/HFCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HFCZ/HFCZ.cshtml
@@ -49,7 +49,7 @@
                 <div class="div_content_info_left">友情提醒：本平台流量和话费不向消费者开具发票</div>
             </div>
             <div class="div_content_info">
-                <input class="input_content_ljzf" id="inputHFLJCZ" value="立即充值" type="button">
+                <input class="input_content_ljzf" id="inputHFLJCZ" value="选择支付方式" type="button">
             </div>
         </div>
     </div>
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="div_content_info">
-                <input class="input_content_ljzf" id="inputLLLJCZ" value="立即充值" type="button">
+                <input class="input_content_ljzf" id="inputLLLJCZ" value="选择支付方式" type="button">
             </div>
         </div>
     </div>
