--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HFCZ/ZFFS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HFCZ/ZFFS.cshtml
@@ -29,8 +29,14 @@
                 <span class="span_content_info_left_zffs" id="span_content_info_left_zffs_zfb"></span>
                 <span class="span_content_info_left_zffs" id="span_content_info_left_zffs_wx"></span>
             </div>
-            <div class="div_content_info">
+            <div class="div_content_info" id="div_content_info_zfb" style="display: block;">
                 <input class="input_content_ljzf" id="inputHFLJCZ" value="立即充值" type="button">
+            </div>
+            <div class="div_content_info" id="div_content_info_wx" style="height: 200px; display: none">
+                <span class="span_content_info_qrcode" id="span_content_info_qrcode"></span>
+                <p class="p_content_info" style="margin-top: 40px;">1、打开微信</p>
+                <p class="p_content_info">2、使用扫一扫，扫描左侧二维码</p>
+                <p class="p_content_info">3、完成支付</p>
             </div>
         </div>
     </div>
