--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -88,7 +88,7 @@
                     <em class="em_left_menu"></em>
                 </li>
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanHFCZ">话费充值</span></li>
-                <li class="li_left_menu"><span class="span_left_menu_second" id="spanDKCZ">点卡充值</span></li>
+                <li class="li_left_menu"><span class="span_left_menu_second" id="spanYXCZ">游戏充值</span></li>
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanHCDP">火车订票</span></li>
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanWZCX">违章查询</span></li>
                 <li class="li_left_menu"><span class="span_left_menu_second" id="spanJDYD">酒店预订</span></li>
