--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YXCZ/YXCZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YXCZ/YXCZ.css
@@ -1,4 +1,4 @@
-﻿.div_photo {
+﻿.div_content {
     width: 900px;
     display: block;
     height: 50px;
@@ -27,13 +27,98 @@
     background: #e9e9e9;
 }
 
-.div_content {
-    height: 130px;
+.divstep_yx {
+    width: 31px;
+    text-align: center;
+    height: 45px;
+    float: left;
+    cursor: pointer;
+}
+
+.spanstep_yx {
+    font-size: 16px;
+    margin-bottom: 5px;
+    line-height: 44px;
+    color: #cccccc;
+}
+
+.emstep_yx {
+    width: 31px;
+    height: 1px;
+    float: left;
+    background: #e9e9e9;
+}
+
+.span_yxmc {
+    display: block;
+    float: left;
+    height: 40px;
+    line-height: 40px;
+    width: 128px;
+    color: #333;
+    font-size: 14px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.span_yxmc:hover {
+    color: #ff6100;
+    font-weight: 700;
 }
 
 .div_content_info {
-    width: 900px;
-    height: 60px;
+    color: #333;
+    height: 40px;
+    line-height: 40px;
+    font-size: 14px;
+    margin-top: 20px;
     margin-bottom: 20px;
-    padding-top: 33px;
+}
+
+.span_content_info_left {
+    margin-left: 35px;
+    width: 105px;
+    display: inline-block;
+    text-align: right;
+    height: 80px;
+    vertical-align: top;
+}
+
+.div_content_info_right {
+    width: 730px;
+    display: inline-block;
+    height: 80px;
+}
+
+.span_content_info_yxmc {
+        margin-left: 15px;
+    margin-right: 15px;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.span_content_info_cxxz {
+    font-size: 12px;
+    cursor: pointer;
+    color: #5bc0de;
+    display: inline-block;
+
+}
+
+.span_content_info_cxxz:hover {
+    color: #ff6100;
+}
+
+.div_content_info_right_mz {
+    width: 95px;
+    height: 40px;
+    display: inline-block;
+    float: left;
+}
+
+.input_content_gxzf {
+    font-size: 16px;
+    border: none;
+    color: #ff6100;
+    height: 40px;
 }
