--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YXCZ/YXCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YXCZ/YXCZ.cshtml
@@ -28,29 +28,32 @@
         </div>
     </div>
     <div id="div_content_dkcz" style="display: block">
-        <div class="div_content" id="div_content_yxxz" style="display: none">
+        <div class="div_content" id="div_content_yxxz" style="display: block">
             <div class="div_content" id="div_content_yxbq">
             </div>
             <div class="div_content" id="div_content_yxmc">
             </div>
         </div>
-        <div class="div_content" id="div_content_yxcz">
-
-            <div class="div_content_info"><span class="span_content_info_left">您选择的游戏为</span><span class="span_content_info_yxmc">传奇3</span><span class="span_content_info_cxxz">重新选择</span></div>
+        <div class="div_content" id="div_content_yxcz" style="display: none">
+            <div class="div_content_info"><span class="span_content_info_left">您选择的游戏为</span><span class="span_content_info_yxmc" id="span_content_info_yxmc"></span><span class="span_content_info_cxxz" id="span_content_info_cxxz">重新选择</span></div>
             <div class="div_content_info">
                 <span class="span_content_info_left">面值：</span>
                 <div class="div_content_info_right">
-                    <div class="div_content_info_right_mz"><input type="radio" /><span>1元</span></div>
-                    <div class="div_content_info_right_mz"><input type="radio" /><span>10元</span></div>
-                    <div class="div_content_info_right_mz"><input type="radio" /><span>30元</span></div>
-                    <div class="div_content_info_right_mz"><input type="radio" /><span>35元</span></div>
-                    <div class="div_content_info_right_mz"><input type="radio" /><span>45元</span></div>
-                    <div class="div_content_info_right_mz"><input type="radio" /><span>50元</span></div>
+                    <div class="div_content_info_right_mz"><input class="radio_content_info_right_mz" type="radio" /><span class="span_content_info_right_mz">1元</span></div>
+                    <div class="div_content_info_right_mz"><input class="radio_content_info_right_mz" type="radio" /><span class="span_content_info_right_mz">10元</span></div>
+                    <div class="div_content_info_right_mz"><input class="radio_content_info_right_mz" type="radio" /><span class="span_content_info_right_mz">30元</span></div>
+                    <div class="div_content_info_right_mz"><input class="radio_content_info_right_mz" type="radio" /><span class="span_content_info_right_mz">35元</span></div>
+                    <div class="div_content_info_right_mz"><input class="radio_content_info_right_mz" type="radio" /><span class="span_content_info_right_mz">45元</span></div>
+                    <div class="div_content_info_right_mz"><input class="radio_content_info_right_mz" type="radio" /><span class="span_content_info_right_mz">50元</span></div>
                 </div>
             </div>
             <div class="div_content_info">
                 <span class="span_content_info_left">售价：</span>
-                <input class="input_content_gxzf" id="inputGXZF" value="0.0元" type="text">
+                <input class="input_content_sj" id="inputSJ" value="0.0元" type="text">
+            </div>
+            <div class="div_content_info">
+               
+                <input class="input_content_ljzf" id="inputLJCZ" value="立即充值" type="button">
             </div>
         </div>
     </div>
